# Tny

./: .gitignore  CMakeLists.txt  TnyConfig.cmake.in  UseTny.cmake
src/tny/: tny.hpp
